# loggi

./: .gitignore  CMakeLists.txt  README.md
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cxx  test_loggi_backend_sd.cxx  test_loggi_backend_stderr.cxx  test_loggi_backend_stdout.cxx
include/loggi/: backend.hxx  backend_dynamic.hxx  backend_hdrgen.hxx  backend_sd.hxx  backend_stderr.hxx  backend_stdout.hxx  compat_fmt.hxx  compat_sloc.hxx  compat_unreachable.hxx  context.hxx  format_backend.hxx  format_impl.hxx  format_loggi.hxx  level.hxx  log.hxx  loggi.hxx  loggi_compat_fmt.hxx  loggi_compat_sloc.hxx  loggi_format.hxx  loggi_impl.hxx  loggi_printf.hxx  printf_backend.hxx  printf_impl.hxx  printf_loggi.hxx
include/loggi/backend/: backend.hxx  backend_dynamic.hxx  backend_hdrgen.hxx  backend_sd.hxx  backend_stdout.hxx
include/loggi/impl/: cod.hxx  constexpr.hxx  fmt.hxx  format.hxx  printf.hxx  sloc.hxx  unreachable.hxx
src/: backend_dynamic.cxx  backend_ostream.hxx  backend_sd.cxx  backend_stderr.cxx  backend_stdout.cxx  loggi_impl.cxx
